--- a/php4/en/aliases.html
+++ b/php4/en/aliases.html
@@ -1,37 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
- <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>List of Function Aliases</title>
 
-<link media="all" rel="stylesheet" type="text/css" href="../../styles/theme-base.css" />
-<link media="all" rel="stylesheet" type="text/css" href="../../styles/theme-medium.css" />
- </head>
- <body class="docs"><div class="navbar navbar-fixed-top">
-  <div class="navbar-inner clearfix">
-    <ul class="nav" style="width: 100%">
-      <li style="float: left;"><a href="extensions.state.html">« State</a></li>
-      <li style="float: right;"><a href="reserved.html">List of Reserved Words »</a></li>
-    </ul>
-  </div>
-</div>
-<div id="breadcrumbs" class="clearfix">
-  <ul class="breadcrumbs-container">
-    <li><a href="index.html">PHP Manual</a></li>
-    <li><a href="appendices.html">Appendices</a></li>
-    <li>List of Function Aliases</li>
-  </ul>
-</div>
-<div id="layout">
-  <div id="layout-content"><div id="aliases" class="appendix">
- <h1>List of Function Aliases</h1>
-
- <p class="para">
-  There are quite a few functions in PHP which you can call with more
-  than one name. In some cases there is no preferred name among the
-  multiple ones, <span class="function"><a href="function.is-int.html" class="function">is_int()</a></span> and
-  <span class="function"><a href="function.is-integer.html" class="function">is_integer()</a></span> are equally good for example.
-  However there are functions which changed names because of an API
+ changed names because of an API
   cleanup or some other reason and the old names are only kept as
   aliases for backward compatibility. It is usually a bad idea to use
   these kind of aliases, as they may be bound to obsolescence or
@@ -45,27 +13,7 @@
     <thead>
      <tr>
       <th>Alias</th>
-      <th>Master function</th>
-      <th>Extension used</th>
-     </tr>
-
-    </thead>
-
-    <tbody class="tbody">
-     <tr>
-      <td>_</td>
-      <td><span class="function"><a href="function.gettext.html" class="function">gettext()</a></span></td>
-      <td><a href="ref.gettext.html" class="link">Gettext</a></td>
-     </tr>
-
-     <tr>
-      <td>add</td>
-      <td><span class="function"><a href="swfmovie.add.html" class="function">swfmovie_add()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
-     </tr>
-
-     <tr>
-      <td>add</td>
+      
       <td><span class="function"><a href="swfsprite.add.html" class="function">swfsprite_add()</a></span></td>
       <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
      </tr>
@@ -78,43 +26,12 @@
 
      <tr>
       <td>addaction</td>
-      <td><span class="function"><a href="swfbutton.addaction.html" class="function">swfbutton_addAction()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
+      Ming (flash)</a<tr>
+      <td>addstring</tdfunction"><a href="swftext.addstring.html" class="function">swftext_addString()</a></span></td>
+      <td><a href="ref.m.htm" class="link">Ming (flash)</a></td>
      </tr>
-
-     <tr>
-      <td>addcolor</td>
-      <td><span class="function"><a href="swfdisplayitem.addcolor.html" class="function">swfdisplayitem_addColor()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
-     </tr>
-
-     <tr>
-      <td>addentry</td>
-      <td><span class="function"><a href="swfgradient.addentry.html" class="function">swfgradient_addEntry()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
-     </tr>
-
-     <tr>
-      <td>addfill</td>
-      <td><span class="function"><a href="swfshape.addfill.html" class="function">swfshape_addfill()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
-     </tr>
-
-     <tr>
-      <td>addshape</td>
-      <td><span class="function"><a href="swfbutton.addshape.html" class="function">swfbutton_addShape()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
-     </tr>
-
-     <tr>
-      <td>addstring</td>
-      <td><span class="function"><a href="swftext.addstring.html" class="function">swftext_addString()</a></span></td>
-      <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
-     </tr>
-
-     <tr>
-      <td>addstring</td>
-      <td><span class="function"><a href="swftextfield.addstring.html" class="function">swftextfield_addString()</a></span></td>
+<td>addstring</td>
+      <td><="function="swftextfield.addstring.html" class="function">swftextfield_addString()</a></span></td>
       <td><a href="ref.ming.html" class="link">Ming (flash)</a></td>
      </tr>
 
